# care-app

./: .gitignore  AI蟆主・謇矩・txt  README_APK.md  ai_service.py  build_apk.ps1  database.py  main.py  mobile_ui_parts.py  pyproject.toml  record_service.py  state_models.py  ui_parts.py
.github/workflows/: build-apk.yml
